# EtherealEngine

./: .appveyor.yml  .clang-format  .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  EDITOR_CONTROLS.md  LICENSE.md  README.md  clang-format-all.sh
editor/: CMakeLists.txt  main.cpp
editor/assets/: asset_compiler.cpp  asset_compiler.h  mesh_importer.cpp  mesh_importer.h
editor/console/: console_log.cpp  console_log.h
editor/editing/: editing_system.cpp  editing_system.h  picking_system.cpp  picking_system.h
editor/editor_core/: CMakeLists.txt  core.cpp
editor/editor_core/gui/: CMakeLists.txt  gui.cpp  gui.h
editor/editor_core/mesh_import/: CMakeLists.txt  mesh_import.cpp  mesh_import.h
editor/editor_core/nativefd/: CMakeLists.txt  filedialog.cpp  filedialog.h
editor/editor_runtime/: CMakeLists.txt  main.cpp
editor/editor_runtime/assets/: asset_compiler.cpp  asset_compiler.h  asset_extensions.h  mesh_importer.cpp  mesh_importer.h
editor/editor_runtime/console/: console_log.cpp  console_log.h
editor/editor_runtime/editing/: editing_system.cpp  editing_system.h  picking_system.cpp  picking_system.h
editor/editor_runtime/interface/: gui_system.cpp  gui_system.h
editor/editor_runtime/meta/: meta.h
editor/editor_runtime/rendering/: debugdraw_system.cpp  debugdraw_system.h
editor/editor_runtime/system/: app.cpp  app.h  events.cpp  events.h  project_manager.cpp  project_manager.h
editor/interface/: gui_system.cpp  gui_system.h  gui_window.cpp  gui_window.h
editor/interface/docks/: assets_dock.cpp  assets_dock.h  console_dock.cpp  console_dock.h  docking.cpp  docking.h  game_dock.cpp  game_dock.h  hierarchy_dock.cpp  hierarchy_dock.h  imguidock.cpp  imguidock.h  inspector_dock.cpp  inspector_dock.h  scene_dock.cpp  scene_dock.h  style_dock.cpp  style_dock.h
editor/interface/embedded/: consolas.ttf.h  roboto_regular.ttf.h  robotomono_regular.ttf.h
editor/interface/gizmos/: imguizmo.cpp  imguizmo.h
editor/interface/imgui/: imgui_user.h  imgui_user.inl
editor/interface/inspectors/: inspector.cpp  inspector.h  inspector_assets.cpp  inspector_assets.h  inspector_basetypes.cpp  inspector_basetypes.h  inspector_coretypes.cpp  inspector_coretypes.h  inspector_entity.cpp  inspector_entity.h  inspector_light.cpp  inspector_light.h  inspector_math.cpp  inspector_math.h  inspectors.cpp  inspectors.h
editor/lib/: .gitignore
editor/meta/: meta.h  project_manager.hpp
editor/meta/interface/: gui_system.cpp  gui_system.hpp
editor/meta/system/: project_manager.cpp  project_manager.hpp
editor/projects/vc14/: editor.sln  editor.vcxproj  editor.vcxproj.filters  geometryc.vcxproj  geometryc.vcxproj.filters  glslang.filters  glslang.vcxproj  glslang.vcxproj.filters  shaderc.vcxproj  texturec.vcxproj  texturec.vcxproj.filters
editor/rendering/: debugdraw_system.cpp  debugdraw_system.h
editor/shaderc/: shaderc.h  shaderc_hlsl.cpp  shaderc_spirv.cpp
editor/source/editor/: edit_state.cpp  edit_state.h  editor_app.cpp  editor_app.h  editor_window.cpp  editor_window.h  main.cpp  project.cpp  project.h
editor/source/geometryc/: geometryc.cpp  geometryc.h
editor/source/shaderc/: shaderc.cpp  shaderc.h  shaderc_glsl.cpp  shaderc_hlsl.cpp  shaderc_pssl.cpp  shaderc_spirv.cpp
editor/source/texturec/: texturec.cpp
editor/system/: app.cpp  app.h  editor_window.cpp  editor_window.h  project_manager.cpp  project_manager.h
editor/texturec/: texturec.cpp  texturec.h
engine/core/: CMakeLists.txt  core.cpp  core.h
engine/core/audio/: CMakeLists.txt  audio.cpp  audio.h  blank_ogg.bin.h  check.cpp  check.h  device.cpp  device.h  exception.h  library.h  listener.cpp  listener.h  logger.cpp  logger.h  sound.cpp  sound.h  sound_data.cpp  sound_data.h  sound_info.h  source.cpp  source.h  types.h  utils.cpp  utils.h
engine/core/cmd_line/: CMakeLists.txt  args.cpp  args.h  parser.hpp
engine/core/common/: CMakeLists.txt  assert.hpp  basetypes.hpp  bitflags.hpp  common.h  handle_object_set.hpp  handle_set.cpp  hash.hpp  pathname_tag_tree.cpp  pathname_tag_tree.h  platform.h  platform_config.h  spimpl.hpp  string.cpp  string.h  utils.h
engine/core/config/: CMakeLists.txt  cfg.h
engine/core/console/: CMakeLists.txt  console.cpp  console.h
engine/core/filesystem/: CMakeLists.txt  filesystem.cpp  filesystem.h  filesystem_cache.hpp  filesystem_syncer.cpp  filesystem_syncer.h  filesystem_watcher.cpp  filesystem_watcher.h  filesystem_watcher.hpp
engine/core/graphics/: CMakeLists.txt  debugdraw.cpp  debugdraw.h  format.cpp  format.h  frame_buffer.cpp  frame_buffer.h  graphics.cpp  graphics.h  handle_impl.h  index_buffer.cpp  index_buffer.h  program.cpp  program.h  render_pass.cpp  render_pass.h  render_view.cpp  render_view.h  render_view_keys.cpp  render_view_keys.h  shader.cpp  shader.h  texture.cpp  texture.h  uniform.cpp  uniform.h  vertex_buffer.cpp  vertex_buffer.h  vertex_decl.cpp  vertex_decl.h
engine/core/handle/: CMakeLists.txt  handle.hpp  handle_object_set.hpp  handle_set.cpp  handle_set.hpp
engine/core/logging/: CMakeLists.txt  logging.cpp  logging.h
engine/core/math/: CMakeLists.txt  bbox.cpp  bbox.h  bbox_extruded.cpp  bbox_extruded.h  bsphere.cpp  bsphere.h  frustum.cpp  frustum.h  glm_includes.h  math_includes.h  math_types.h  plane.cpp  plane.h  transform.cpp  transform.h  transform_t.hpp
engine/core/memory/: CMakeLists.txt  checked_delete.h  memory.h  memory_pool.cpp  memory_pool.hpp
engine/core/meta/: CMakeLists.txt
engine/core/nonstd/: function_traits.hpp
engine/core/random/: CMakeLists.txt  random.cpp  random.h
engine/core/reflection/: CMakeLists.txt  reflection.cpp  reflection.h  registration.h
engine/core/serialization/: CMakeLists.txt  archives.h  associative_archive.h  binary_archive.h  serialization.cpp  serialization.h
engine/core/signals/: CMakeLists.txt  binder.hpp  delegate.hpp  event.hpp  signals.cpp  signals.h
engine/core/simulation/: CMakeLists.txt  simulation.cpp  simulation.h
engine/core/singleton/: CMakeLists.txt  singleton.cpp  singleton.h
engine/runtime/: CMakeLists.txt  runtime.h
(+1883 files in other folders)
