file(GLOB_RECURSE libsrc *.h *.cpp *.hpp *.c *.cc)

add_subdirectory(config)
add_subdirectory(console)
add_subdirectory(filesystem)
add_subdirectory(graphics)
add_subdirectory(logging)
add_subdirectory(math)
add_subdirectory(memory)
add_subdirectory(random)
add_subdirectory(reflection)
add_subdirectory(serialization)
add_subdirectory(signals)
add_subdirectory(singleton)
add_subdirectory(system)

add_library (core ${libsrc})

target_link_libraries(core PUBLIC config)
target_link_libraries(core PUBLIC console)
target_link_libraries(core PUBLIC filesystem)
target_link_libraries(core PUBLIC graphics)
target_link_libraries(core PUBLIC logging)
target_link_libraries(core PUBLIC math)
target_link_libraries(core PUBLIC memory)
target_link_libraries(core PUBLIC random)
target_link_libraries(core PUBLIC reflection)
target_link_libraries(core PUBLIC serialization)
target_link_libraries(core PUBLIC signals)
target_link_libraries(core PUBLIC singleton)
target_link_libraries(core PUBLIC system)

if(CMAKE_CXX_COMPILER_ID MATCHES "Clang")
    target_link_libraries(core PUBLIC "-stdlib=libstdc++ -lstdc++")
endif()
