add_subdirectory(common)
add_subdirectory(cmd_line)
add_subdirectory(config)
add_subdirectory(console)
add_subdirectory(filesystem)
add_subdirectory(audio)
add_subdirectory(graphics)
add_subdirectory(logging)
add_subdirectory(math)
add_subdirectory(memory)
add_subdirectory(random)
add_subdirectory(reflection)
add_subdirectory(serialization)
add_subdirectory(signals)
add_subdirectory(singleton)
add_subdirectory(system)
add_subdirectory(string_utils)
add_subdirectory(uuid)
add_subdirectory(meta)

add_library (core core.cpp)

target_link_libraries(core PUBLIC common_lib)
target_link_libraries(core PUBLIC cmd_line)
target_link_libraries(core PUBLIC config)
target_link_libraries(core PUBLIC console)
target_link_libraries(core PUBLIC filesystem)
target_link_libraries(core PUBLIC graphics)
target_link_libraries(core PUBLIC logging)
target_link_libraries(core PUBLIC math)
target_link_libraries(core PUBLIC memory)
target_link_libraries(core PUBLIC random)
target_link_libraries(core PUBLIC reflection)
target_link_libraries(core PUBLIC serialization)
target_link_libraries(core PUBLIC signals)
target_link_libraries(core PUBLIC singleton)
target_link_libraries(core PUBLIC system)
target_link_libraries(core PUBLIC string_utils)
target_link_libraries(core PUBLIC audio)
target_link_libraries(core PUBLIC uuid)
target_link_libraries(core PUBLIC meta)

if(MINGW)
	target_link_libraries(core PUBLIC "-static")
endif()
